# rmw_unix_socket_cpp

./: .clangd  .gitignore  IMPLEMENTATION.md  PRESENTATION.md  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
rmw_unix_socket_cpp/: CMakeLists.txt  DESIGN.md  package.xml
rmw_unix_socket_cpp/src/: identifier.hpp  logging.hpp  registry.cpp  registry.hpp  rmw_client.cpp  rmw_event.cpp  rmw_features.cpp  rmw_graph.cpp  rmw_guard_condition.cpp  rmw_init.cpp  rmw_node.cpp  rmw_publisher.cpp  rmw_serialize.cpp  rmw_service.cpp  rmw_subscription.cpp  rmw_unsupported.cpp  rmw_wait.cpp  serialization.cpp  serialization.hpp  transport.cpp  transport.hpp  types.hpp
rmw_unix_socket_cpp/test/: README.md  test_base.hpp  test_registry.cpp  test_registry_concurrent.cpp  test_rmw_graph.cpp  test_rmw_guard_condition.cpp  test_rmw_init.cpp  test_rmw_node.cpp  test_rmw_pub_sub.cpp  test_rmw_qos.cpp  test_rmw_service_client.cpp  test_rmw_wait.cpp  test_serialization.cpp  test_transport.cpp
rmw_unix_socket_cpp/test/perf/: README.md  perf_pubsub.py  perf_services.py  scale_100_nodes.py
