<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_unix_socket_cpp</name>
  <version>0.1.0</version>
  <description>
    Lightweight RMW implementation for ROS 2 using Unix domain sockets.
    Designed for localhost-only communication with minimal resource usage.
  </description>
  <maintainer email="benaliabderrahmen88@gmail.com">Abderahmane BENALI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rcpputils</depend>
  <depend>rmw</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>fastcdr</depend>
  <depend>rosidl_typesupport_fastrtps_c</depend>
  <depend>rosidl_typesupport_fastrtps_cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_msgs</test_depend>
  <test_depend>rosidl_typesupport_cpp</test_depend>

  <member_of_group>rmw_implementation_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
